--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
            <!--LOGO--> 
             <div id="logo">
                <a href="index.html">
-                    <img src="/img/launch.png">
+                    <img src="./img/launch.png">
                     <h1 id="texto-logo">abastos</h1>
                 </a>
             </div>
             <!--MENÚ-->    
             <nav>
-                <img src="/img/menu.png" id="imagen-menu" onclick="menu();">
+                <img src="./img/menu.png" id="imagen-menu" onclick="menu();">
                 <ul id="menu-principal">
                     <li><a href="index.html" class="activo">Inicio</a></li>
                     <li><a href="#" class="activo">Nosotros</a></li>
