--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://file.myfontastic.com/uHjwAgLr5b7KeoLux4v2Ej/icons.css" rel="stylesheet">
 </head>
 <body>
+    <!--INICIO-->
    <section id="inicio">
         <header>
            <!--LOGO--> 
@@ -39,6 +40,11 @@
             <li><a href="#"><span class="icon-instagram"></span></a></li>
             <li><a href="#"><span class="icon-gplus"></span></a></li>
         </ul>
+    </section>
+    
+    <!------NOSOTROS------>
+    <section id="nosotros">
+        
     </section>
     <script>
         function menu(){
