--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <a href="#" id="btn-inicio">get started <i class="icon-info"></i></a>
         <!--REDES SOCIALES-->
         <ul class="social">
-            <li><a href="#"><span class="icon-facebook"></span></a></li>
-            <li><a href="#"><span class="icon-twitter"></span></a></li>
-            <li><a href="#"><span class="icon-instagram"></span></a></li>
-            <li><a href="#"><span class="icon-gplus"></span></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><span class="icon-facebook"></span></a></li>
+            <li><a href="https://twitter.com/?lang=es" target="_blank"><span class="icon-twitter"></span></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><span class="icon-instagram"></span></a></li>
+            <li><a href="https://plus.google.com/?hl=es" target="_blank"><span class="icon-gplus"></span></a></li>
         </ul>
     </section>
     
