--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
               });
            });
     </script>
-    <!-----Comentario de prueba--->
+
+    <!-----Sobre Nosotros--->
+
+    <section>
+        <div class="tblock"> 
+            <h3 class="tittle">Sobre Nosotros:</h3>
+                <p class="pabout">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quibusdam. Omnis, consequatur inventore alias reprehenderit, ullam enim corporis quibusdam cumque culpa voluptatem minus. Tenetur quidem esse omnis beatae voluptatibus quae! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus tenetur excepturi at earum quam? Repellat dolor quidem delectus officia dolore, amet sit itaque impedit, quisquam atque dignissimos autem ratione. Quibusdam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus aliquid esse qui a praesentium, accusantium, dolore accusamus pariatur impedit reiciendis provident amet doloribus, ab illum nesciunt! Fugiat, repellat facere! Deserunt? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ad assumenda numquam laborum officiis a voluptate sint consequatur id pariatur! Qui necessitatibus rerum commodi eaque dignissimos illum repellat quia quibusdam!</p>
+        </div>
+    </section>
 </body>
 </html>
