--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <!------NOSOTROS------>
     <section id="nosotros">
-        <h1>Get everything you need to pick the right Agent.</h1>
+        <h1>Obtén toda la información que necesites sobre nosotros.</h1>
         <div class="cubo1">
             <img src="./img/settings.png">
             <h3>Lorem Ipsum Dolor</h3>
