--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="contacto">
         
     </section>
-
+    <button onclick="topFunction()" id="myBtn">Up</button>
     <script>
         $(document).ready(function(){
             flag = false;
@@ -92,5 +92,21 @@
               });
            });
     </script>
+    <script>
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    document.getElementById("myBtn").style.display = "block";
+  } else {
+    document.getElementById("myBtn").style.display = "none";
+  }
+}
+
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
 </body>
 </html>
