--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="contacto">
         
     </section>
-    <button onclick="topFunction()" id="myBtn">Up</button>
+    <img src="./img/up.png" onclick="topFunction()" id="myBtn">Up</img>
     <script>
         $(document).ready(function(){
             flag = false;
