--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <title>Espai Abastos</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="./img/launch2.png">
     <link href="https://fonts.googleapis.com/css?family=Raleway:800|Roboto" rel="stylesheet">
     <link href="https://file.myfontastic.com/uHjwAgLr5b7KeoLux4v2Ej/icons.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/SmoothScroll.min.js"></script>
     <script src="js/move-top.js"></script>
-    <script src="js/easing.js"></script>
 </head>
 <body>
     <!--INICIO-->
