--- a/index.html
+++ b/index.html
@@ -83,10 +83,12 @@
                 if(!flag){
                     $("#menu-principal").animate({right: '0px'}, 150);
                     $("#imagen-menu").animate({left: '70%'}, 450);
+                    $("#imagen-menu").attr('src', '/img/cross.png');
                     flag = true;
                 } else{
                     $("#menu-principal").animate({right: '-380px'}, 150);
                     $("#imagen-menu").animate({left: '85%'}, 450);
+                    $("#imagen-menu").attr('src', '/img/menu.png');
                     flag = false;
                 }
               });
@@ -107,6 +109,17 @@ function topFunction() {
   document.body.scrollTop = 0;
   document.documentElement.scrollTop = 0;
 }
+</script>
+<script>
+    $(document).ready(function(){
+        $(document).scroll(function(){
+            $("#menu-principal").animate({right: '-380px'}, 0);
+            $("#imagen-menu").css('display', 'none');
+        });
+        $("#myBtn").click(function(){
+            $("#imagen-menu").css('display', 'block');
+        });
+    });
 </script>
 </body>
 </html>
