--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
                 if(!flag){
                     $("#menu-principal").animate({right: '0px'}, 150);
                     $("#imagen-menu").animate({left: '70%'}, 450);
-                    $("#imagen-menu").attr('src', '/img/cross.png');
+                    $("#imagen-menu").attr('src', './img/cross.png');
                     flag = true;
                 } else{
                     $("#menu-principal").animate({right: '-380px'}, 150);
                     $("#imagen-menu").animate({left: '85%'}, 450);
-                    $("#imagen-menu").attr('src', '/img/menu.png');
+                    $("#imagen-menu").attr('src', './img/menu.png');
                     flag = false;
                 }
               });
