--- a/index.html
+++ b/index.html
@@ -65,21 +65,25 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet eius consequuntur ut veritatis, modi, aliquam illo.</p>
         </div>
     </section>
-
+    <!------SEPARADOR------>
+    <div id="separador">
+        <h1>espai abastos</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, nam, perspiciatis! Reprehenderit consectetur, perferendis deleniti non expedita nihil aspernatur aut, nisi vitae. Vero sunt, tempore. Voluptas dolorem, cupiditate asperiores nulla.</p>
+    </div>
     <!------INSTALACIONES------>
     <section id="instalaciones">
         <h1>Nuestras instalaciones disponibles</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure dolor maiores quam, provident accusantium tenetur fuga id consequatur. Possimus earum quos quas ullam quaerat, cum, distinctio deserunt laborum eius accusamus? Lorem ipsum dolor sit amet.</p>
         <div id="imagenes">
-            <img src="./img/01.jpg" id="img1">
-            <img src="./img/02.jpg" id="img2">
-            <img src="./img/03.jpg" id="img3">
-            <img src="./img/04.jpg" id="img4">
-            <img src="./img/05.jpg" id="img5">
-            <img src="./img/06.jpg" id="img6">
-            <img src="./img/07.jpg" id="img7">
-            <img src="./img/08.jpg" id="img8">
-            <img src="./img/09.jpg" id="img9">
+            <img src="./img/01.jpg">
+            <img src="./img/02.jpg">
+            <img src="./img/03.jpg">
+            <img src="./img/04.jpg">
+            <img src="./img/05.jpg">
+            <img src="./img/06.jpg">
+            <img src="./img/07.jpg">
+            <img src="./img/08.jpg">
+            <img src="./img/09.jpg">
         </div>
     </section>
 
@@ -141,7 +145,7 @@ function topFunction() {
     });
 </script>
 
-<script>
+<script type="text/javascript">
     $(document).ready(function(){
         jQuery("#imagenes").unitegallery();
     });
