--- a/index.html
+++ b/index.html
@@ -87,11 +87,36 @@
         </div>
     </section>
 
-    <!------CONTACTO------>
-    <section id="contacto">
-        
-    </section>
-    <img src="./img/up.png" onclick="topFunction()" id="myBtn">Up</img>
+  <!-- Contacto-->
+  <section id="contacto">
+      <div id="texto">
+      <h3 class="contactott">Contactanos!</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et Lorem ipsum</p>
+      </div>
+        <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3080.0544312899474!2d-0.3904491842963459!3d39.46809902070603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604f46da4855e1%3A0x9c6c795bc92d164e!2sInstituto+de+Educaci%C3%B3n+Secundaria+Abastos!5e0!3m2!1ses!2ses!4v1550524450545" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <!--formulario -->
+        <div class="formulario">
+          <form action="#">
+              <div class="formularios">
+                <input type="text" placeholder="Nombre" required="">
+              </div>
+              <div class="formularios">
+                <input type="email" placeholder="Email" required="">
+              </div>
+              <div class="formularios">
+                <input type="text" placeholder="Numero de Teléfono" required="">
+              </div>
+              <div class="formulariomensaje">
+                <textarea placeholder="Mensaje" rows="3" required=""></textarea>
+              </div>
+              <button class="enviar">Enviar</button>
+          </form>
+          </div>
+    </div>
+  </section>
+
+  <img src="./img/up.png" onclick="topFunction()" id="myBtn">Up</img>
     <script>
         $(document).ready(function(){
             flag = false;
