--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </div>
         <div class="mapa">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3080.0544312899474!2d-0.3904491842963459!3d39.46809902070603!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604f46da4855e1%3A0x9c6c795bc92d164e!2sInstituto+de+Educaci%C3%B3n+Secundaria+Abastos!5e0!3m2!1ses!2ses!4v1550524450545" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <!--formulario -->
+    <!--formulario -->
         <div class="formulario">
           <form action="#" method="POST">
               <div class="formularios">
@@ -105,7 +105,7 @@
                 <input type="email" placeholder="Email" required>
               </div>
               <div class="formularios">
-                <input type="text" placeholder="Numero de Teléfono" required>
+                <input type="number" placeholder="Numero de Teléfono" required>
               </div>
               <div class="formulariomensaje">
                 <textarea placeholder="Mensaje" rows="3" required></textarea>
@@ -115,6 +115,11 @@
           </div>
     </div>
   </section>
+
+    <!--footer -->
+    <footer>
+        <h2>&copy;2019 Abastos. Todos los derechos reservados | Diseñado por Abastos</h2>
+    </footer>
 
   <img src="./img/up.png" onclick="topFunction()" id="myBtn">Up</img>
     <script>
