--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </nav>
         </header>
         <!--CONTENIDO-->
-        <h1 class="titulo-principal">instituto de educación secundaria IES ABASTOS</h1>
+        <h1 class="titulo-principal">ESPAI ABASTOS</h1>
         <p class="parrafo-principal">Somos una empresa de alquiler de espacios para diversas actividades, disponemos de una gran cantidad de instalaciones a la disposición de cualquiera de nuestros clientes.</p>
         <a href="#instalaciones" id="btn-inicio">Empieza ya!<i class="icon-info"></i></a>
         <!--REDES SOCIALES-->
@@ -52,17 +52,17 @@
         <div class="cubo1">
             <img src="./img/settings.png">
             <h3>AGENCIA CREATIVA</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet eius consequuntur ut veritatis, modi, aliquam illo.</p>
+            <p>Siempre estamos innovando con nuevas instalaciones con el fin de facilizar la mejor comodidad del cliente.</p>
         </div>
         <div class="cubo2">
             <img src="./img/cloud.png">
             <h3>TECNOLOGÍA MODERNA</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet eius consequuntur ut veritatis, modi, aliquam illo.</p>
+            <p>Trabajamos con la última tecnología disponible en el mercado para garantizar los mejores resultados posibles.</p>
         </div>
         <div class="cubo3">
             <img src="./img/graph.png">
             <h3>TRABAJO EFICAZ</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet eius consequuntur ut veritatis, modi, aliquam illo.</p>
+            <p>Nuestras instalaciones están optimizadas para sacar el mayor rendimiento posible teniendo todo a mano en el menor tiempo posible</p>
         </div>
     </section>
     <!------SEPARADOR------>
@@ -73,9 +73,9 @@
     <!------INSTALACIONES------>
     <section id="instalaciones">
         <h1>Nuestras instalaciones disponibles</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure dolor maiores quam, provident accusantium tenetur fuga id consequatur. Possimus earum quos quas ullam quaerat, cum, distinctio deserunt laborum eius accusamus? Lorem ipsum dolor sit amet.</p>
+        <p>A continuación os mostramos una colección de imagenes de nuestras mejores instalaciones.</p>
         <div id="imagenes">
-            <img src="./img/01.jpg">
+            <img src="./img/01.jpg" class="zoom">
             <img src="./img/02.jpg">
             <img src="./img/03.jpg">
             <img src="./img/04.jpg">
@@ -118,7 +118,7 @@
 
     <!--footer -->
     <footer>
-        <h2>&copy;2019 Abastos. Todos los derechos reservados | Diseñado por Abastos</h2>
+        <h2>&copy;2019 Abastos. Todos los derechos reservados | Diseñado por Alberto, Jorge y Ximo</h2>
     </footer>
 
   <img src="./img/up.png" onclick="topFunction()" id="myBtn">Up</img>
