--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h1>Nuestras instalaciones disponibles</h1>
         <p>A continuación os mostramos una colección de imagenes de nuestras mejores instalaciones.</p>
         <div id="imagenes">
-            <img src="./img/01.jpg" class="zoom">
+            <img src="./img/01.jpg">
             <img src="./img/02.jpg">
             <img src="./img/03.jpg">
             <img src="./img/04.jpg">
