--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!------SEPARADOR------>
     <div id="separador">
         <h1>espai abastos</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, nam, perspiciatis! Reprehenderit consectetur, perferendis deleniti non expedita nihil aspernatur aut, nisi vitae. Vero sunt, tempore. Voluptas dolorem, cupiditate asperiores nulla.</p>
+        <p>Disponemos de una gran variedad de instalaciones donde podremos atenderle personalmente, siempre apostamos por tener la mejor relación posible con nuestros clientes.</p>
     </div>
     <!------INSTALACIONES------>
     <section id="instalaciones">
