--- a/index.html
+++ b/index.html
@@ -115,7 +115,21 @@
           </div>
     </div>
   </section>
-
+   <!--espacios-->
+    <section>
+        <div class="espacios"></div>
+        <h1>Aqui puedes ver algunos de nuestros espacios disponibles:</h1>
+        <div id="img-esp">
+            <img src="./img/05.jpg">
+            <img src="./img/08.jpg">
+            <img src="./img/02.jpg">
+        </div>
+        <div id="precios">
+            <p>230€/mes</p>
+            <p>300€/mes</p>
+            <p>190€/mes</p>
+        </div>
+    </section>
     <!--footer -->
     <footer>
         <h2>&copy;2019 Abastos. Todos los derechos reservados | Diseñado por Alberto, Jorge y Ximo</h2>
