--- a/index.html
+++ b/index.html
@@ -87,6 +87,33 @@
         </div>
     </section>
 
+   <!--ESPACIOS-->
+
+   <section id="espacios">
+    <h3>Espacios</h3>
+    <p>Aqui puedes ver algunos de nuestros espacios disponibles:</p>
+    <div class="instalaciones">
+        <div class="tarjeta1">
+            <img src="./img/05.jpg" alt="Denim Jeans" style="width:100%">
+            <h1>Patios interiores</h1>
+            <p class="price">49.99€</p>
+            <p><button>Comprar ahora</button></p>
+        </div>
+        <div class="tarjeta2">
+            <img src="./img/08.jpg" alt="Denim Jeans" style="width:100%">
+            <h1>Aulas</h1>
+            <p class="price">19.99€</p>
+            <p><button>Comprar ahora</button></p>
+        </div>
+          <div class="tarjeta3">
+            <img src="./img/02.jpg" alt="Denim Jeans" style="width:100%">
+            <h1>Patios exteriores</h1>
+            <p class="price">39.99€</p>
+            <p><button>Comprar Ahora</button></p>
+          </div>
+    </div>
+    </section>
+
   <!-- Contacto-->
   <section id="contacto">
       <div id="texto">
@@ -115,21 +142,6 @@
           </div>
     </div>
   </section>
-   <!--espacios-->
-    <section>
-        <div class="espacios"></div>
-        <h1>Aqui puedes ver algunos de nuestros espacios disponibles:</h1>
-        <div id="img-esp">
-            <img src="./img/05.jpg">
-            <img src="./img/08.jpg">
-            <img src="./img/02.jpg">
-        </div>
-        <div id="precios">
-            <p>230€/mes</p>
-            <p>300€/mes</p>
-            <p>190€/mes</p>
-        </div>
-    </section>
     <!--footer -->
     <footer>
         <h2>&copy;2019 Abastos. Todos los derechos reservados | Diseñado por Alberto, Jorge y Ximo</h2>
